--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/owl.carousel.css">
+<link rel="stylesheet" href="css/owl.theme.default.css">
+ <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <header>
@@ -49,7 +52,7 @@
 <p class="p_bs">Are you curious about the world around you? Our guides are for smart global citizens, world travelers and engaged residents who want to gain a deeper understanding of the cultures and societies they care about.</p>
 <p class="p_bs">Available as ebooks here and on Amazon.</p>
     <h2 class="h2_bs">Our best sellers</h2>
-    <div class="thalby_g">
+    <div class="thalby_g owl-carousel">
     <article class="french_c">
         <img class="img_bs" src="images/image 2.jpg" alt="img2">
         <h3 class="h3_add artcl_p1">Thalby Guide to <br> French Culture and <br> Heritage</h3>
@@ -68,9 +71,32 @@
         <p class="price">USD 6.99</p>
         <a href="#" class="button_add">Add to cart</a>
     </article>
+    <article class="french_c">
+        <img class="img_bs" src="images/image 2.jpg" alt="img2">
+        <h3 class="h3_add artcl_p1">Thalby Guide to <br> French Culture and <br> Heritage</h3>
+        <p class="price">USD 6.99</p>
+        <a href="#" class="button_add">Add to cart</a>
+    </article>
+    <article class="french_p">
+        <img class="img_bs" src="images/image 3.jpg" alt="img3">
+        <h3 class="h3_add artcl_p2">Thalby Guide to  <br> French People and <br> Society</h3>
+        <p class="price">USD 6.99</p>
+        <a href="#" class="button_add">Add to cart</a>
+    </article>
+    <article class="german_c">
+        <img class="img_bs" src="images/image 4.jpg" alt="img4">
+        <h3 class="h3_add artcl_p3">Thalby Guide to <br> German Culture and <br> Heritage</h3>
+        <p class="price">USD 6.99</p>
+        <a href="#" class="button_add">Add to cart</a>
+    </article>
+    
 </div>
             </div>
         </section>
     </main>
+    <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
