--- a/index.html
+++ b/index.html
@@ -10,28 +10,37 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link rel="stylesheet" href="css/owl.theme.default.css">
- <link rel="stylesheet" href="css/style.css">
-
+<link rel="stylesheet" href="css/menu_mobile.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <header>
         <div class="container">
             <a href="#" class="logo"><img src="images/logo.svg" alt="logo"></a>
-            <nav>
-                <ul>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Collections</a></li>
-                    <li><a href="#">Try a Free Guide</a></li>
-                    <li><a href="#">Stories</a></li>
-                </ul>
-            </nav>
-<ul >
-    <li><a href="#" title="" target="" class="a_inst"><img src="images/insta.svg" alt="inst"></a></li>
-    <li><a href="#" class="a_search"><img src="images/search.svg" alt="search"></a></li>
-    <li><a href="#" class="a_cart"><img src="images/cart.svg" alt="cart"></a></li>
-</ul>
+    <div class="overlay-navigation">
+        <nav role="navigation">
+          <ul>
+            <!-- <li><a href="#" data-content="The beginning">Shop</a></li> -->
+            <li><a href="#" data-content="Curious?">Shop</a></li>
+            <li><a href="#" data-content="I got game">Collections</a></li>
+            <li><a href="#" data-content="Only the finest">Try a Free Guide</a></li>
+            <li><a href="#" data-content="Don't hesitate">Stories</a></li>
+          </ul>
+        </nav>
+      </div>
+      <ul >
+        <li><a href="#" title="" target="" class="a_inst"><img src="images/insta.svg" alt="inst"></a></li>
+        <li><a href="#" class="a_search"><img src="images/search.svg" alt="search"></a></li>
+        <li><a href="#" class="a_cart"><img src="images/cart.svg" alt="cart"></a></li>
+    </ul>
+            </div>
+        </header> 
+              <div class="open-overlay">
+          <span class="bar-top"></span>
+          <span class="bar-middle"></span>
+          <span class="bar-bottom"></span>
         </div>
-    </header>
     <main>
         <section class="main_banner">
 <div class="container h1_c">
@@ -39,10 +48,12 @@
         <h1>Fall deeper in love  with <br>
             humanity.</h1>
             <p class="p_h1">Get to know the world through our concise, informative and inspiring guides.</p>
-            <a href="#" class="buttom_shop">Shop Now</a>
+            <div class="button_shop_wrapper">
+                <a href="#" class="buttom_shop">Shop Now</a>
+            </div>
     </article>
     <div class="container_img"> 
-<img src="images/img_h1.png" alt="img">
+<img class="img_h1" src="images/img_h1.png" alt="img">
     </div>
 </div>
         </section>
