--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <section class="main_banner">
 <div class="container h1_c">
     <article >
-        <h1>Fall deeper in love  with <br>
+        <h1 class="fancy">Fall deeper in love  with <br>
             humanity.</h1>
-            <p class="p_h1">Get to know the world through our concise, informative and inspiring guides.</p>
+            <p class="p_h1 ">Get to know the world through our concise, informative and inspiring guides.</p>
             <div class="button_shop_wrapper">
                 <a href="#" class="buttom_shop">Shop Now</a>
             </div>
@@ -105,7 +105,148 @@
 </div>
             </div>
         </section>
+   <section class="people_as">
+    <div class="container">
+<img src="images/Rectangle.png" alt="img_people">
+<div class="content_people">
+    <h2>People and Society</h2>
+    <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
+    <a href="#">Shop Society Guides</a>
+</div>
+    </div>
+</section> 
+<section class="culture_ah">
+    <div class="container">
+<div class="content_culture">
+    <h2>Culture and Heritage</h2>
+    <p>As well as covering heritage and tradition, our guides to culture introduce you to the designers, artists and chefs creating at the forefront of today's culture.</p>
+    <a href="#">Shop Culture Guides</a>
+</div>
+<img src="images/culture.png" alt="img_culture">
+    </div>
+</section> 
+<section class="power_ap">
+    <div class="container">
+<img src="images/power.png" alt="img_power">
+<div class="content_power">
+    <h2>Power and Politics</h2>
+    <p>Our guides to power take you behind the scenes to explore the power dynamics, policies and politics shaping a country's future and its global position.</p>
+    <a href="#">Coming 2022!</a>
+</div>
+    </div>
+</section> 
+<section class="ball">
+    <div class="container">
+    <h2 class="b_h2small">Some of the features that <br> make Thalby guides unique</h2>
+    <div class="color_ball">
+    <div  class="style_ball sky_color"> </div>
+    <h3>Written by<br>locals</h3>
+ </div>
+ <div class="color_ball">
+    <div  class="style_ball green_color"> </div>
+    <h3>Packed with<br>insight</h3>
+ </div>
+ <div class="color_ball">
+    <div  class="style_ball blue_color"> </div>
+    <h3>Interviews with<br>diverse voices</h3>
+ </div>
+ <div class="color_ball">
+    <div  class="style_ball brouwn_color"> </div>
+    <h3>Key facts and<br>etiquette tips</h3>
+ </div>
+ <div class="color_ball">
+    <div  class="style_ball red_color"> </div>
+    <h3>A concise<br>1-hour read</h3>
+ </div>
+ <div class="color_ball">
+    <div  class="style_ball purple_color"> </div>
+    <h3>Instant<br>digital access</h3>
+ </div>
+</div>
+    <h2 class="b_h2large">Each Thalby guide includes interviews with <br> a range of fascinating voices, such as</h2>
+</div>
+</section>
+
+
+<section class="sctn_people">
+    <div class="container">
+        <div class="s_people ">
+        <div class="img_pstn"><img src="images/Men.png" alt="Designer"></div>
+        <p class="people_p1 ">"I don’t like things to be conventional. If it’s too <br> nice, I bring disorder."</p>
+        <p class="people_p2">Camille Muller, <br>Landscape Designer, France</p>
+        <a href="#">Discover</a>
+    </div>
+    <div class="s_people ">
+        <div class="img_pstn pstn"><img src="images/women.png" alt="Witch"></div>
+        <p class="people_p1 ">"Magic is not magic in <br> the sense that I can just <br> wish for anything."</p>
+        <p class="people_p2 ">Lilly Stoephasius,<br>Skateboarder, Germany</p>
+        <a href="#">Discover</a>
+    </div>
+    <div class="s_people ">
+        <div class="img_pstn"><img src="images/girl.png" alt="Skateboarder"></div>
+        <p class="people_p1 ">"I was eight years old <br> when I entered my first <br> competition. I won it."</p>
+        <p class="people_p2">Camille Muller, <br>Landscape Designer, France</p>
+        <a href="#">Discover</a>
+    </div>
+
+    </div>
+</section>
+
+
+<section class="form_s">
+<div class="keep_it">
+<h2>Keep in touch</h2>
+<p>Get our travel advice, global views and travel freebies in your inbox</p>
+<form class="first_last_name">
+        <input type="text" class="form_style style_name " placeholder="First Name">
+        <input type="text" class="form_style style_name" placeholder="Last Name">
+    <input type="text" class="form_style style_email" placeholder="Email">
+<button class="button_subscribe"><a href="#"></a>Subscribe </button>
+</form>
+</div>
+</div>
+
+</section>
     </main>
+
+
+
+    <footer>
+        <div class="container">
+            <div class="footer_content">
+            <div class="logo_f">
+            <a href="#"><img src="images/logo_f.svg" alt="logo_f"></a>
+            <ul class="icon_h" >
+                <li><a href="#"><img src="images/fb_f.svg" alt="fb_f"></a></li>
+                <li><a href="#"><img src="images/inst_f.svg" alt="inst_f"></a></li>
+                <li><a href="#"><img src="images/tw_f.svg" alt="tw_f"></a></li>
+            </ul>
+        </div>
+        <div class="content_r">
+        <div class="about">
+<h3>ABOUT</h3>
+<ul>
+<li><a href="#">About Us</a></li>
+<li><a href="#">Privacy Policy</a></li>
+<li><a href="#">Terms and Conditions</a></li>
+<li><a href="#">Write for Us</a></li>
+        </ul>
+    </div>
+    <div class="contact">
+<h3>CONTACT</h3>
+<ul>
+    <li><a href="#">Email hi@thalby.com</a></li>
+    <li><a href="#">Help</a></li>
+</ul>
+    </div>
+</div>
+</div>
+<div class="f_copyright">
+    <p>Thalby LLC © 2021</p>
+</div>
+</div>
+    </footer>
+    <script src="js/animatePlugin.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/owl.carousel.min.js"></script>
